# Kadeu

./: .gitignore  Cargo.toml  README.md
examples/: elements.json
flashcards/: blue_oysters.json
kadeu/src/: lib.rs  store.rs  strategy.rs
src/: app.rs  cli.rs  feeds.rs  game.rs  io.rs  lib.rs  main.rs  model.rs  strategy.rs  tui.rs  ui.rs
src/game/: engine.rs  flashcard.rs  mod.rs
src/ui/: deck_browser.rs  inputs.rs  mod.rs  style.rs
tui/: Cargo.toml
tui/src/: lib.rs  main.rs
