[package]
name = "kadeu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version ="^4.4.8", features = ["derive"]}
clio = "0.3.4"
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = { version = "0.28.0", features = ["unstable-widget-ref"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.34"
toml = "0.8.19"
